--- a/client/src/components/Dashboard/Feed/NewPost/NewPost.module.css
+++ b/client/src/components/Dashboard/Feed/NewPost/NewPost.module.css
@@ -36,6 +36,7 @@
   border: none;
   border-bottom: 1px solid var(--menu-navbar-border);
   margin: 10px 0;
+  transition: 700ms;
 }
 
 .new-post-features {
