--- a/client/src/components/Navbar/Profile/Profile.module.css
+++ b/client/src/components/Navbar/Profile/Profile.module.css
@@ -6,6 +6,7 @@
   border: none;
   border-left: 1px solid var(--menu-navbar-border);
   height: 60px;
+  transition: 700ms;
 }
 
 .navbar-profile-pic {
