--- a/client/src/components/Navbar/Search/Search.module.css
+++ b/client/src/components/Navbar/Search/Search.module.css
@@ -7,6 +7,7 @@
   width: 70%;
   position: relative;
   background-color: var(--background-search-input);
+  transition: 700ms;
 }
 
 .navbar-search-text {
@@ -27,6 +28,7 @@
   font-family: "Poppins", sans-serif;
   font-size: 0.9rem;
   background-color: var(--background-search-input);
+  transition: 700ms;
 }
 
 .search-input:focus {
